data/issues_nolabel/nolabel_test_4194.txt
Syntax Errors in Python 3.5 : Installed using pip3

I followed the instructions on installing TensorFlow using pip and installed both the Ubuntu/Linux 64-bit, GPU enabled, Python 3.5 and Ubuntu/Linux 64-bit, GPU enabled, Python 2.7 versions using pip3 and pip2 respectively. The package imports correctly in Python 2.7 but the following SyntaxErrors occur for Python 3.5.
python3
Python 3.5.2 (default, Jul  5 2016, 12:43:10) 
[GCC 5.4.0 20160609] on linux
Type "help", "copyright", "credits" or "license" for more information.

>>> import tensorflow as tf
I tensorflow/stream_executor/dso_loader.cc:108] successfully opened CUDA library libcublas.so locally
I tensorflow/stream_executor/dso_loader.cc:108] successfully opened CUDA library libcudnn.so locally
I tensorflow/stream_executor/dso_loader.cc:108] successfully opened CUDA library libcufft.so locally
I tensorflow/stream_executor/dso_loader.cc:108] successfully opened CUDA library libcuda.so.1 locally
I tensorflow/stream_executor/dso_loader.cc:108] successfully opened CUDA library libcurand.so locally
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
...
  File "/home/gszep/.local/lib/python3.5/site-packages/dateutil/parser.py", line 158
    l.append("%s=%s" % (attr, `value`))
                              ^
SyntaxError: invalid syntax